<resources>
    <string name="app_name">DMS</string>
    <string name="navigation_food">급식</string>
    <string name="navigation_submit">신청</string>
    <string name="navigation_notice">공지</string>
    <string name="navigation_mypage">마이페이지</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="id_et"><font size="14">아이디를 입력해주세요</font></string>
    <string name="pw_et"><font size="14">비밀번호를 입력해주세요</font></string>
    <string name="code_et"><font size="14">확인코드를 입력해주세요</font></string>
    <string name="confirm_et"><font size="14">비밀번호를 확인해주세요</font></string>
    <string name="sign_title">DMS for Android</string>
    <string name="sign_sub_title">Dormitory Management System</string>
    <string name="sign_in">로그인</string>
    <string name="sign_id">아이디</string>
    <string name="sign_id_edit">아이디를 입력해주세요</string>
    <string name="sign_password">비밀번호</string>
    <string name="sign_password_edit">비밀번호를 입력해주세요</string>
    <string name="sign_not_user">아직 DMS 회원이 아니신가요?</string>
    <string name="sign_up">회원가입</string>
    <string name="sign_up_check_code">확인코드 입력</string>
    <string name="sign_up_check_code_edit">확인코드를 입력해주세요</string>
    <string name="sign_password_retry">비밀번호 재입력</string>
    <string name="sign_password_retry_edit">비밀번호를 확인해주세요</string>
    <string name="change_password_title">비밀번호 변경</string>
    <string name="change_password_sub_title">DMS 시스템의 비밀번호를 변경합니다.</string>
    <string name="change_password_original">기존 비밀번호</string>
    <string name="change_password_original_edit">비밀번호를 입력하세요</string>
    <string name="change_password_new">새 비밀번호</string>
    <string name="change_password_new_edit">새 비밀번호를 입력하세요</string>
    <string name="change_password_new_check">새 비밀번호 확인</string>
    <string name="change_password_new_check_edit">새 비밀번호를 확인해주세요</string>
    <string name="change_password">비밀번호 변경</string>
    <string name="mypage_error_report">시설 고장 신고</string>
    <string name="mypage_research">설문 조사</string>
    <string name="mypage_merit">상점</string>
    <string name="mypage_bug_report">버그 신고</string>
    <string name="mypage_demerit">벌점</string>
    <string name="mypage_logout_title">로그아웃</string>
    <string name="mypage_password_change_title">비밀번호 변경</string>
    <string name="mypage_merit_history_title">상 / 벌점 내역</string>
    <string name="mypage_intro_developers_title">개발자 소개</string>
    <string name="team_intro">팀 소개</string>
    <string name="mypage_logout_content">기기내 계정에서 로그아웃합니다.</string>
    <string name="mypage_password_change_content">DMS 계정의 비밀번호를 변경합니다.</string>
    <string name="mypage_merit_history_content">우정관 상 / 벌점 내역을 확인합니다.</string>
    <string name="mypage_intro_developers_content">DMS팀의 개발자를 소개합니다.</string>
    <string name="logout_dialog_bold_content">DMS 계정에서 로그아웃 하시겠습니까?</string>
    <string name="logout_dialog_light_content">(현재 접속중인 계정에서 로그아웃을 진행합니다.)</string>
    <string name="logout_dialog_cancel">취소</string>
    <string name="logout_dialog_logout">로그아웃</string>
    <string name="bug_report_dialog_title">버그신고</string>
    <string name="bug_report_dialog_edit_title">제목</string>
    <string name="bug_report_dialog_edit_bug">버그</string>
    <string name="bug_report_dialog_cancel">취소</string>
    <string name="bug_report_dialog_send">전송</string>
    <string name="institution_dialog_title">시설물 고장 신고</string>
    <string name="institution_dialog_edit_title">제목</string>
    <string name="institution_dialog_edit_room_number">방 번호</string>
    <string name="institution_dialog_edit_report_content">내용</string>
    <string name="institution_dialog_report_title">고장 내용</string>
    <string name="institution_dialog_cancel">취소</string>
    <string name="institution_dialog_send">전송</string>
    <string name="notice_title">대마고\n기숙사\n안내사항</string>
    <string name="notice_description_highlight">DMS</string>
    <string name="notice_description">는 대덕 소프트웨어 마이스터고등학교</string>
    <string name="notice_description2">기숙사 생활에 필요한 유용한 정보를 제공합니다.</string>
    <string name="notice_notice_title">공지사항</string>
    <string name="notice_notice_description">사감부에서 게시한 공지사항을 열람합니다.</string>
    <string name="notice_detail_title">공지사항</string>
    <string name="notice_detail_sub_title">사감부에서 게시한 공지사항을 열람합니다</string>
    <string name="notice_rules_title">기숙사 규정</string>
    <string name="notice_rules_description">기숙사 규정을 열람합니다.</string>
    <string name="notice_question_title">자주하는 질문</string>
    <string name="notice_question_description">자주하는 질문을 열람합니다.</string>
    <string name="notice_description_title">3월 우정관 캠페인</string>
    <string name="notice_description_description">사감부에서 2018년 03월 10일에 게시한 공지입니다.</string>
    <string name="notice_description_content">3월 우정관 캠페인은 \'복장규정 잘 지키기\' 입니다.아 침운동, 등교점호 시 지정된 복장을 잘 착용하기 바랍니다. 3월 중 복장 벌점이 없는 학생에게 상점 1점을 부여합니다.</string>
    <string name="apply_going_appbar_title">외출 신청</string>
    <string name="apply_going_title">외출을 신청하세요</string>
    <string name="apply_going_explanation">외출증 시스템의 변화로 DMS에서 외출 신청서를 작성 후 사감실에 본인 확인을 하고 외출을 할 수 있습니다.</string>
    <string name="apply_going_saturday_title">토요외출</string>
    <string name="apply_going_saturday_explanation">토요일 12시 30분부터 점심식사를 한 후 외출이 가능합니다. 주말 급식을 신청하지 않은 학생은 바로 외출이 가능합니다. 외출한 학생들은 예외 상황이 아닌 이상 17시 30분까지 귀사하여 점호 후 저녁 식사를 해야 합니다.</string>
    <string name="apply_going_sunday_title">일요외출</string>
    <string name="apply_going_sunday_explanation">일요일 12시 30분부터 점심식사를 한 후 외출이 가능합니다. 주말 급식을 신청하지 않은 학생은 바로 외출이 가능합니다. 외출한 학생들은 예외 상황이 아닌 이상 17시 30분까지 귀사하여 점호 후 저녁 식사를 해야 합니다.</string>
    <string name="apply_going_workday_title">평일외출</string>
    <string name="apply_going_workday_explanation">평일에 하는 외출이 아닌 예외 상황인 평일 (예: 시험 끝난 후)에 가능한 외출입니다. 부모님 허락을 맡은 후 선생님이 확인하시면 외출이 가능합니다.</string>
    <string name="apply_going_btn_text">신청</string>
    <string name="apply_going_log_explanation">외출 신청서는 요일당 최대 5개까지 가능합니다.</string>
    <string name="apply_going_log_card_title">외출신청서</string>
    <string name="apply_going_log_delete_btn">취소</string>
    <string name="apply_going_doc_going_title">외출</string>
    <string name="apply_going_doc_date_hint">날짜</string>
    <string name="apply_going_doc_time_hint">일시</string>
    <string name="apply_going_doc_return_title">귀가</string>
    <string name="apply_going_doc_reason_title">사유</string>
    <string name="apply_going_doc_reason_hint">사유 입력</string>
    <string name="apply_staying_appbar_title">잔류 신청</string>
    <string name="apply_staying_title">잔류신청을 해주세요</string>
    <string name="apply_staying_explanation">금요일 밤부터 일요일 밤까지의 상태를 정합니다. 학생들은 목요일 10시까지 잔류 신청을 완료해야 합니다.</string>
    <string name="apply_staying_friday_title">금요귀가</string>
    <string name="apply_staying_saturday_go_title">토요귀가</string>
    <string name="apply_staying_saturday_back_title">토요귀사</string>
    <string name="apply_staying_friday_explanation">금요귀가를 신청하신 경우 금요일 일과 종료 후 오후 8시 30분 이후 귀가하여 일요일 오전 8시 30분 이후 기숙사로 귀사 가능합니다.금요귀가를 신청하시겠습니까?</string>
    <string name="apply_staying_saturday_go_explanation">토요귀가를 신청하신 경우 토요일 오후 9시 이전에 귀가하여   일요일 오전 8시 30분 이후 기숙사로 귀사 가능합니다. 토요귀가를 신청하시겠습니까?</string>
    <string name="apply_staying_saturday_back_explanation">토요귀사를 신청하신 경우 금요일 일과 종료 후 오후 8시 30분 이후 귀가하여 토요일 오전 8시 30분 이후 기숙사로 귀사 가능합니다. 토요귀사를 신청하시겠습니까?</string>
    <string name="apply_staying_staying_title">잔류</string>
    <string name="apply_staying_staying_explanation">잔류를 신청하신 경우 주말동안 기숙사에 남게 됩니다. 잔류를 신청하시겠습니까?</string>
    <string name="apply_staying_btn_text">신청</string>
    <string name="apply_extension_study_eleven_text">11시</string>
    <string name="apply_extension_study_twelve_text">12시</string>
    <string name="apply_extension_study_gaonsil_text">가온실</string>
    <string name="apply_extension_study_naonsil_text">나온실</string>
    <string name="apply_extension_study_daonsil_text">다온실</string>
    <string name="apply_extension_study_raonsil_text">라온실</string>
    <string name="apply_extension_study_second_floor_text">2층 독서실</string>
    <string name="apply_extension_study_third_floor_text">3층 독서실</string>
    <string name="apply_extension_study_fourth_floor_text">4층 독서실</string>
    <string name="apply_extension_study_fifth_floor_text">5층 독서실</string>
    <string name="apply_extension_study_third_floor_sofa">3층 쇼파</string>
    <string name="apply_extension_study_cancel_btn">취소</string>
    <string name="apply_extension_study_apply_btn">신청</string>
    <string name="apply_extension_study_board_text">칠판</string>
    <string name="apply_extension_study_window_text">창문</string>
    <string name="apply_extension_study_hallway_text">복도</string>
    <string name="apply_going_edit_cancel_btn">취소</string>
    <string name="apply_going_edit_edit_btn">수정</string>
    <string name="apply_music_app_title">기상음악 신청</string>
    <string name="apply_music_title">기상음악 신청해주세요</string>
    <string name="apply_music_explanation">월요일부터 금요일 아침까지 기상시에 나올 노래를 신청받습니다. 한 사람당 한 곡만 신청이 가능합니다.</string>
    <string name="apply_music_base_explanation">아침 기상 시에 나올 노래를 신청받습니다. 한 사람당 한 곡만 신청이 가능하며 적절하지 않은 노래나 부적절한 가사가 포함된 노래는 반려될 수 있습니다.</string>
    <string name="apply_music_monday_title">월요일</string>
    <string name="apply_music_monday_explanation">월요일 아침 기상 시에 나올 노래를 신청받습니다. 한 사람당 한 곡만 신청이 가능하며 적절하지 않은 노래나 부적절한 가사가 포함된 노래는 반려될 수 있습니다.</string>
    <string name="apply_music_tuesday_title">화요일</string>
    <string name="apply_music_tuesday_explanation">화요일 아침 기상 시에 나올 노래를 신청받습니다. 한 사람당 한 곡만 신청이 가능하며 적절하지 않은 노래나 부적절한 가사가 포함된 노래는 반려될 수 있습니다.</string>
    <string name="apply_music_wednesday_title">수요일</string>
    <string name="apply_music_wednesday_explanation">수요일 아침 기상 시에 나올 노래를 신청받습니다. 한 사람당 한 곡만 신청이 가능하며 적절하지 않은 노래나 부적절한 가사가 포함된 노래는 반려될 수 있습니다.</string>
    <string name="apply_music_thursday_title">목요일</string>
    <string name="apply_music_thursday_explanation">목요일 아침 기상 시에 나올 노래를 신청받습니다. 한 사람당 한 곡만 신청이 가능하며 적절하지 않은 노래나 부적절한 가사가 포함된 노래는 반려될 수 있습니다.</string>
    <string name="apply_music_friday_title">금요일</string>
    <string name="apply_music_friday_explanation">금요일 아침 기상 시에 나올 노래를 신청받습니다. 한 사람당 한 곡만 신청이 가능하며 적절하지 않은 노래나 부적절한 가사가 포함된 노래는 반려될 수 있습니다.</string>
    <string name="apply_music_apply_btn">신청</string>
    <string name="apply_music_delete_btn">취소</string>
    <string name="dialog_apply_music_title">\" 신청 \"</string>
    <string name="apply_music_dialog_music_monday_title">월요일 노래 신청</string>
    <string name="apply_music_dialog_music_tuesday_title">화요일 노래 신청</string>
    <string name="apply_music_dialog_music_wednesday_title">수요일 노래 신청</string>
    <string name="apply_music_dialog_music_thursday_title">목요일 노래 신청</string>
    <string name="apply_music_dialog_music_friday_title">금요일 노래 신청</string>
    <string name="apply_music_dialog_music_title_hint">노래 제목</string>
    <string name="apply_music_dialog_music_artist_hint">아티스트</string>
    <string name="apply_music_dialog_music_cancel">취소</string>
    <string name="apply_music_dialog_music_apply">신청</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="apply_meal_title">주말급식을 신청해주세요</string>
    <string name="apply_meal_explanation">주말에 배식을 받을것인지에 대한 여부를 결정합니다. 주말급식 신청여부는 담임선생님께서 확인하신 후 영양사선생님께 전달되니 신중히 결정해주세요.</string>
    <string name="complete">확인</string>
    <string name="screen_theme">화면 테마</string>
</resources>
