<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMyPageBack">

    <TextView
        android:id="@+id/notice_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/nanumsquareextrabold"
        android:text="@string/notice_title"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/notice_description1_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="21dp"
        android:fontFamily="@font/nanumsquareextrabold"
        android:text="@string/notice_description_highlight"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notice_title_tv" />

    <TextView
        android:id="@+id/notice_description2_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nanumsquareregular"
        android:text="@string/notice_description"
        android:textColor="@color/colorGray800"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/notice_description1_tv"
        app:layout_constraintTop_toTopOf="@id/notice_description1_tv" />

    <TextView
        android:id="@+id/notice_description3_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:fontFamily="@font/nanumsquareregular"
        android:text="@string/notice_description2"
        android:textColor="@color/colorGray800"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notice_description1_tv" />

    <dsm.android.v3.ui.CustomView.CustomCardView
        android:id="@+id/notice_notice_customview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:count="3"
        app:description="@string/notice_notice_description"
        app:layout_constraintBottom_toTopOf="@id/notice_rules_customview"
        app:layout_constraintTop_toBottomOf="@id/notice_description3_tv"
        app:layout_constraintVertical_chainStyle="packed"
        app:title="@string/notice_notice_title" />

    <dsm.android.v3.ui.CustomView.CustomCardView
        android:id="@+id/notice_rules_customview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:count="3"
        app:description="@string/notice_rules_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notice_notice_customview"
        app:layout_constraintVertical_chainStyle="packed"
        app:title="@string/notice_rules_title" />

</android.support.constraint.ConstraintLayout>