<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="InstitutionReportViewModel"
            type="dsm.android.v3.presentation.viewModel.mypage.institutionReport.InstitutionReportViewModel"></variable>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/radius_dialog_white"
        android:paddingBottom="8dp">

        <ImageView
            android:id="@+id/round_warning_logo_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/ic_waring_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/institution_dialog_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/nanumsquarebold"
            android:lineSpacingExtra="2sp"
            android:text="@string/institution_dialog_title"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/typo_header"
            app:layout_constraintBottom_toTopOf="@id/institution_dialog_edit_title_lay"
            app:layout_constraintStart_toEndOf="@id/round_warning_logo_img"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/institution_dialog_edit_title_lay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/round_warning_logo_img">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/institution_dialog_title_edit"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:errorValue="@{InstitutionReportViewModel.institutionTitleError}">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:fontFamily="@font/nanumsquarebold"
                    android:hint="@string/institution_dialog_edit_title"
                    android:maxLines="3"
                    android:text="@={InstitutionReportViewModel.institutionTitle}"
                    android:textSize="@dimen/typo_body1" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/institution_dialog_room_number_lay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@id/institution_dialog_edit_report_lay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/institution_dialog_edit_title_lay">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/institution_dialog_room_number_edit"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:errorValue="@{InstitutionReportViewModel.institutionRoomNumberError}">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:fontFamily="@font/nanumsquarebold"
                    android:hint="@string/institution_dialog_edit_room_number"
                    android:inputType="number"
                    android:maxLines="1"
                    android:text="@={InstitutionReportViewModel.institutionRoomNumber}"
                    android:textSize="@dimen/typo_body1" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/institution_dialog_edit_report_lay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp"
            app:layout_constraintBottom_toTopOf="@id/institution_dialog_cancel_and_send_lay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/institution_dialog_room_number_lay">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/institution_dialog_report_content_edit"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:errorValue="@{InstitutionReportViewModel.institutionReportContentError}">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:fontFamily="@font/nanumsquarebold"
                    android:gravity="top"
                    android:hint="@string/institution_dialog_edit_report_content"
                    android:maxLines="10"
                    android:text="@={InstitutionReportViewModel.institutionReportContent}"
                    android:textSize="@dimen/typo_body1" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/institution_dialog_cancel_and_send_lay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/institution_dialog_edit_report_lay">

            <TextView
                android:id="@+id/institution_dialog_cancel_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanumsquarebold"
                android:onClick="@{()->InstitutionReportViewModel.institutionClickCancel()}"
                android:paddingHorizontal="50dp"
                android:paddingVertical="11dp"
                android:text="@string/institution_dialog_cancel"
                android:textColor="@color/colorGray600"
                android:textSize="@dimen/typo_body1"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/institution_dialog_send_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanumsquarebold"
                android:onClick="@{(view)->InstitutionReportViewModel.institutionClickSend(view)}"
                android:paddingHorizontal="50dp"
                android:paddingVertical="11dp"
                android:text="@string/institution_dialog_send"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/typo_body1"
                app:layout_constraintEnd_toEndOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>

</layout>
