<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
                name="applyGoingViewModel"
                type="dsm.android.v3.ui.applyGoingOut.applyGoing.ApplyGoingViewModel"/>

        <import type="android.arch.lifecycle.MutableLiveData"/>
    </data>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
                android:id="@+id/applyGoing_explanation_lay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/appBarLayout"
                android:paddingHorizontal="16dp"
                android:paddingTop="26dp"
                android:paddingBottom="20dp">

            <TextView
                    android:id="@+id/applyGoing_title_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/apply_going_title"
                    android:textSize="@dimen/text_size_24"
                    android:fontFamily="@font/nanumsquareextrabold"
                    android:textColor="@color/colorPrimary"/>

            <TextView
                    android:id="@+id/applyGoing_explanation_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGray600"
                    android:textSize="@dimen/typo_subtitle"
                    android:text="@string/apply_going_explanation"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/nanumsquareregular"
                    android:letterSpacing="0.02"
                    android:lineSpacingExtra="10sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/applyGoing_title_tv"/>

        </android.support.constraint.ConstraintLayout>

        <Button
                android:onClick="@{()->applyGoingViewModel.applyGoingClickDoc()}"
                android:id="@+id/applyGoing_apply_btn"
                android:layout_marginHorizontal="16dp"
                android:background="@drawable/radius_view_primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/applyGoing_apply_list_pager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center"
                android:text="@string/apply_going_btn_text"
                android:textSize="@dimen/typo_header"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/nanumsquareregular"/>

        <android.support.v4.view.ViewPager
                android:paddingHorizontal="50dp"
                android:clipToPadding="false"
                android:id="@+id/applyGoing_apply_list_pager"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/applyGoing_explanation_lay"
                app:layout_constraintBottom_toTopOf="@id/applyGoing_apply_btn"/>

    </android.support.constraint.ConstraintLayout>
</layout>